changed javascript path

--- a/Template/index.html
+++ b/Template/index.html
@@ -8,7 +8,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
       rel="stylesheet"
-      <script src="/home/williamjevans/Scripts/javascript/Udemy/JavaScript-The-Complete-Guide/Template/assets/script/app.js"></script>
+      <script src="assets/script/app.js"></script>
     <link rel="stylesheet" href="assets/styles/app.css" />
   </head>
   <body>
